# lugarun.github.io

./: .gitignore  Makefile  about.markdown  blog.html  bookmarks.html  coollinks.html  dreams.html  flake.nix  index.html  index.md  package.yaml  projectideas.html  site-builder.cabal  site-builder.hs  site.hs
_data/: coollinks.yml  navigation.yml  projectideas.yml
_data/bookmarks/: blogs.yml  other.yml  social.yml  work.yml
_includes/: navigation.html
_layouts/: default.html  post.html
_posts/: 2020-03-23-Hello-Kaggle.md  2020-03-24-Hello-Kaggle.md  2020-03-24-Work-flow.md  2020-09-18-First-Weeks-In-Machine-Learning-Research.md  2020-09-21-Three.js-Experiment.md
_sass/: main.scss
assets/css/: native.css  styles.scss
assets/js/: threejsblog.js
css/: default.css  syntax.css
docs/: about.html  archive.html  atom.xml  index.html  rss.xml
docs/css/: default.css  syntax.css
docs/posts/: 2022-03-19-hot-swappable-switch-sockets.html  2022-07-31-keyboard.html  2023-03-21-keyboard-firmware-update.html  2023-10-02-notes.html  2023-10-09-my-data-science-project-tooling.html  2023-11-01-kakoune-love-letter.html
posts/: 2022-03-19-hot-swappable-switch-sockets.markdown  2022-07-31-keyboard.markdown  2023-03-21-keyboard-firmware-update.md  2023-10-09-my-data-science-project-tooling.md  2023-11-01-kakoune-love-letter.md
templates/: default.html  post-list.html  post.html  tikz.tex
